--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.h2.console.enabled=true
+spring.datasource.platform==h2
+spring.datasource.url=jdbc:h2:~/test
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 #set logging level because of bug in swagger-models dependency
 #it is already fixed but springfox hasn't released their project with the new dependency
-logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
+logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR'
+security.oauth2.client.clientId=my-client
+security.oauth2.client.clientSecret=my-secret
+security.oauth2.resource.tokenInfoUri=http://localhost:8080/uaa/oauth/check_token
+security.oauth2.resource.preferTokenInfo=true
+swagger.oauth.url=http://localhost:8080/uaa/oauth/authorize
