--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.2.11</version>
         </dependency>
+        <dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		
+		
+		
     </dependencies>
 
     <build>
